--- a/app/src/main/res/xml-v14/preferences.xml
+++ b/app/src/main/res/xml-v14/preferences.xml
@@ -27,6 +27,11 @@
         android:summary="@string/settings_port_summary"
         android:title="@string/settings_port_title" />
 
+    <EditTextPreference
+        android:key="path"
+        android:summary="@string/settings_path_summary"
+        android:title="@string/settings_path_title" />
+
     <SwitchPreference
         android:defaultValue="false"
         android:key="secure"
