--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -25,6 +25,11 @@
         android:summary="@string/settings_port_summary"
         android:title="@string/settings_port_title" />
 
+    <EditTextPreference
+        android:key="path"
+        android:summary="@string/settings_path_summary"
+        android:title="@string/settings_path_title" />
+
     <CheckBoxPreference
         android:defaultValue="false"
         android:key="secure"
